    * 4795 FIX: netstat: Fixed wrong output if LISTENING connections should be monitored on Ubuntu...
    * 4779 FIX: check_mk_agent.freebsd, check_mk_agent.solaris: Reduce agent output by excluding mirror devices
    * 4781 FIX: mk_oracle, mk_oracle.aix: Added support for Oracle 12.2

    Multisite:
    * 4053 FIX: Fixed moving summary line in BI availability when sorting

    HW/SW-Inventory:
    * 4776 FIX: solaris_psrinfo: Fixed handling of newer output eg. of Solaris SPARC T5


1.2.8p23:
    Checks & Agents:
    * 4654 FIX: oracle_recovery_area: Added missing metric info
    * 4655 FIX: fileinfo.groups: Added missing metric information
    * 4661 FIX: msexch_isstore, msexch_isclienttype: Split up check files. Second one needs its own check plugin file if using Nagios core...
            NOTE: Please refer to the migration notes!
    * 4736 FIX: ucs_bladecenter_if: Fixed crash if fabric interconnects are aggregated...
    * 8289 FIX: wagner_titanus_topsense.smoke: Adapted levels to be more user friendly...
    * 4739 FIX: hp_proliant_da_phydrv: Implemented new possible values
    * 4663 FIX: check_mailboxes: Removed useless report_age which causes TypeError: float() argument must be a string or a number
    * 4740 FIX: mysql: Fixed crash if instance is not available anymore
    * 4741 FIX: dell_powerconnect_temp: Fixed missing reference for computing the temperature
    * 4631 FIX: cisco_ace_rserver: Fix broken IP address parsing...
            NOTE: Please refer to the migration notes!
    * 4632 FIX: fsc_subsystems: No longer crash when statuscode is missing
    * 4633 FIX: jolokia_metrics.uptime: No longer crash when agent info is incomplete
    * 4742 FIX: wmi_cpuload: Added required tables to prevent crash...

    WATO:
    * 4680 FIX: Sync of local hierarchy (MKPs) preserves symlinks now...
    * 4750 FIX: Ensure uploaded icons are saved with their filename instead of paths...

    HW/SW-Inventory: